--- a/frontend/src/styles/login.css
+++ b/frontend/src/styles/login.css
@@ -44,12 +44,12 @@
 }
 
 .loginInput {
-    height: 35px;
+    height: 40px;
     border-radius: 10px;
     border: 1px solid gray;
     font-size: 14px;
     padding-left: 20px;
-    margin-top: 30px;
+    margin-top: 20px;
 }
 
 .loginInput:focus {
@@ -57,7 +57,7 @@
 }
 
 .loginButton {
-    margin-top: 40px;
+    margin-top: 15px;
     height: 35px;
     border-radius: 10px;
     border: none;
@@ -81,5 +81,12 @@
     cursor: pointer;
     text-align: center;
     color: #1775ee;
+}
+
+.form-error{
+    font-size: 12px;
+    margin-left:8px ;
+    color: red;
+    margin-bottom: -5px;
 }
 
