--- a/frontend/src/styles/login.css
+++ b/frontend/src/styles/login.css
@@ -33,8 +33,8 @@
 }
 
 .loginBox {
-    height: 400px;
-    padding: 20px;
+    /* height: 400px; */
+    padding: 20px; 
     background-color: white;
     border-radius: 10px;
     display: flex;
