--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -304,6 +304,16 @@
   opacity: 0.7;
 }
 
+#file-upload {
+  display: none;
+}
+
+.custom-file-upload {
+  display: inline-block;
+  padding: 6px 12px;
+  cursor: pointer;
+}
+
 /* rightbar css styles */
 .rightbar {
   flex: 2.5;
