Added an icon on frontend to delete post. Linked the delete icon with a backend API to delete post.

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -64,7 +64,7 @@
 /* styles for left sidebar starts here */
 .sidebar {
   flex: 2.5;
-  height: calc(100vh - 90px);
+  height: calc(100vh);
   overflow-y: scroll;
   position: sticky;
   top: 50px;
